// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<League /> renders correctly 1`] = `
Array [
  <div>
    <div
      className="image -expand -plain"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "margin": 0,
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "opacity": 1,
              "padding": 0,
              "paddingTop": "29.655172413793103%",
              "width": "initial",
            }
          }
        />
        <img
          className="image--native"
          data-nimg="responsive"
          decoding="async"
          onError={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            className="image--native"
            data-nimg="responsive"
            decoding="async"
            loading="lazy"
            onError={[Function]}
            sizes="50vw"
            src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=3840&q=60"
            srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=384&q=60 384w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=3840&q=60 3840w"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
  </div>,
  <div>
    <span
      className="heading -black -large"
    >
      The Vanarama National League
    </span>
    <span
      className="text -lead -darker"
    >
      Read About Our Sponsorship
       
      <a
        className="link -teal -regular -plain"
        href=""
      >
        Here
      </a>
    </span>
    <div
      className="image -expand -plain"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "margin": 0,
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "opacity": 1,
              "padding": 0,
              "paddingTop": "100%",
              "width": "initial",
            }
          }
        />
        <img
          className="image--native"
          data-nimg="responsive"
          decoding="async"
          onError={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            className="image--native"
            data-nimg="responsive"
            decoding="async"
            loading="lazy"
            onError={[Function]}
            sizes="30vw"
            src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=3840&q=60"
            srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=256&q=60 256w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=384&q=60 384w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=3840&q=60 3840w"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
  </div>,
]
`;

exports[`<League /> renders correctly with optional props 1`] = `
Array [
  <div>
    <div
      className="image -expand -plain"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "margin": 0,
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "opacity": 1,
              "padding": 0,
              "paddingTop": "29.655172413793103%",
              "width": "initial",
            }
          }
        />
        <img
          alt="image1"
          className="image--native"
          data-nimg="responsive"
          decoding="async"
          onError={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            alt="image1"
            className="image--native"
            data-nimg="responsive"
            decoding="async"
            loading="lazy"
            onError={[Function]}
            sizes="50vw"
            src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=3840&q=60"
            srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=384&q=60 384w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fnational-league.png&w=3840&q=60 3840w"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
  </div>,
  <div>
    <span
      className="heading -black -large"
    >
      The Vanarama National League
    </span>
    <span
      className="text -lead -darker"
    >
      Read About Our Sponsorship
       
      <a
        className="link -teal -regular -plain"
        href=""
      >
        Here
      </a>
    </span>
    <div
      className="image -expand -plain"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "margin": 0,
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "opacity": 1,
              "padding": 0,
              "paddingTop": "100%",
              "width": "initial",
            }
          }
        />
        <img
          alt="image1"
          className="image--native"
          data-nimg="responsive"
          decoding="async"
          onError={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            alt="image1"
            className="image--native"
            data-nimg="responsive"
            decoding="async"
            loading="lazy"
            onError={[Function]}
            sizes="30vw"
            src="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=3840&q=60"
            srcSet="/_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=256&q=60 256w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=384&q=60 384w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fdev.vanarama-nonprod.com%2FAssets%2Fimages-optimised%2Fhome%2Fleague-cup.png&w=3840&q=60 3840w"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
  </div>,
]
`;
